--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #56658B;
   --foreground: #171717;
 }
 
@@ -15,7 +15,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #56658B
+    ;
   }
 }
 
